Fixed scaling on mobile

--- a/button_group_horz.css
+++ b/button_group_horz.css
@@ -1,9 +1,6 @@
 .button_group_horz {
-    width: 95%;
-    height: 80px;
-    position: absolute;
-    left: 2.5%;
-
+    width: 100%;
+    height: 32px;
 }
 
 .button_group_horz button {
