--- a/style.css
+++ b/style.css
@@ -10,12 +10,6 @@ img {
 	max-width: 100%;
 }
 
-.margin {
-	float: left;
-	height: 100%;
-	width: 25%;
-}
-
 .corner_img {
 	display: block;
 	position: absolute;
@@ -30,17 +24,9 @@ img {
 	text-align: center;
 }
 
-#header_text {
-	position: absolute;
-	width: 50%;
-	left: 25%;
-	text-align: center;
-	display: block;
-	font-size: 70px;
-}
-
 #main {
-	position: relative;
+	min-height: 700px;
+	height: 100%;
 	background-color: var(--main-color);
 	background-image: url(img/photo_booth_overlay.png);
 	border-left: 100px solid transparent;
@@ -48,12 +34,11 @@ img {
 	border-image: url(img/spanish_tile_border.png) 100 round;
 
 	font-family: 'Merienda';
+
 }
 
 #main h1 {
-	margin-top: 50px;
 	font-size: 48px;
-	vertical-align: middle;
 }
 
 #main h2 {
@@ -76,22 +61,13 @@ img {
 #main p, li{
 	font-size: 20px;
 }
-
-#main:after {
-	content: "";
-	display: table;
-	clear: both;
-}
-
 #center {
+	padding-top: 20px;
+	margin-left: 15%;
+	margin-right: 15%;
 	text-align: center;
-	position: absolute;
 	background: linear-gradient(to right, rgba(0,0,0, 0),
 		rgba(248, 196, 113, 0.8) 20%, rgba(248, 196, 113, 0.8) 80%, rgba(0,0,0, 0) 100%);
-	top: 0px;
-	left: 12.5%;
-	width: 75%;
-	height: 100%;
 }
 
 #main_image {
